--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -4,7 +4,7 @@ const profile = {
   avatar: "/perfil.jpg",
   redes: [
     { icon: "/ds.svg", url: "https://discord.gg/FKWWdEwY" },
-    { icon: "/ig.svg", url: "https://www.instagram.com/onlysharonrios.m?igsh=Z3dteGo5ODdrcm5p&utm_source=qr" },
+    { icon: "/ig.svg", url: "https://www.instagram.com/sharonrios.m/" },
     { icon: "/tiktok.svg", url: "https://www.tiktok.com/@sharonrios.m?_t=ZM-8vSTv1Zj9mB&_r=1" },
     { icon: "/spotify.svg", url: "https://open.spotify.com/user/31wucmkonuelejnf3l6sv3ig5zsy?si=OLw-EIkDSmqgA8-PmGggVA"},
     
