--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from "../layouts/Layout.astro";
     height: 100vh;
   }
 </style>
-<Layout title="Perfiles">
+<Layout title="Kyrie.wz">
   
 </Layout>
 <ProfileCard />
