--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -3,11 +3,11 @@ const profile = {
   nombre: "Kyrie.wz",
   avatar: "/perfil.jpg",
   redes: [
-    { icon: "/ds.svg", url: "https://discord.gg/FKWWdEwY" },
+    { icon: "/ds.svg", url: "https://discord.gg/CA2Uhwed" },
     { icon: "/ig.svg", url: "https://www.instagram.com/sharonrios.m/" },
     { icon: "/tiktok.svg", url: "https://www.tiktok.com/@sharonrios.m?_t=ZM-8vSTv1Zj9mB&_r=1" },
     { icon: "/spotify.svg", url: "https://open.spotify.com/user/31wucmkonuelejnf3l6sv3ig5zsy?si=OLw-EIkDSmqgA8-PmGggVA"},
-    
+    {icon: "/kick.svg", url: "https://kick.com/sharonrios"},
     // agrega más aquí
   ],
 };
